--- a/style.css
+++ b/style.css
@@ -263,14 +263,11 @@ p{
     padding-top: 20px;
     padding-left: 5px;
     padding-bottom: 10px;
-}
-
-.answer{
     display: none;
 }
 
 .faq-box.show .answer{
-    display: block;
+    display: flex;
 }
 
 .head{
